# plot_phylo

./: .coveragerc  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  citation.cff  plot_tree.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  python-publish.yml
examples/: bad_tree.nw  basic_tree.nw  big_tree.nw  primates.nw  primates_mixed.nw
man/: conf.py  contents.rst  index.md  requirements.txt
man/pages/: detailed.md  functions.rst  installation.md  introduction.md  matplotlib.md  parameters.md  quickstart.md  testing.md
plot_phylo/: __init__.py  amend_tree.py  draw_tree.py  get_boxes.py  plot_phylo.py  post_draw.py
plot_tree/: plot_tree.py
tests/: helper_functions.py  test_amend_tree.py  test_amend_tree_data.py  test_data.py  test_draw_tree.py  test_draw_tree_data.py  test_get_boxes.py  test_get_boxes_data.py  test_plot_phylo.py  test_plot_phylo_data.py
tests/test_objects/: amend_tree_appearance_bold_primates.pickle  amend_tree_appearance_col_dict_big_tree.pickle  amend_tree_appearance_col_dict_primates.pickle  amend_tree_appearance_font_size_basic_tree.pickle  amend_tree_appearance_font_size_big_tree.pickle  amend_tree_appearance_font_size_primates.pickle  amend_tree_appearance_label_dict_primates.pickle  amend_tree_appearance_line_col_basic_tree.pickle  amend_tree_appearance_show_support_basic_tree.pickle  amend_tree_dims_depth_basic_tree.pickle  amend_tree_dims_depth_big_tree.pickle  amend_tree_dims_depth_primates.pickle  amend_tree_dims_height_basic_tree.pickle  amend_tree_dims_height_big_tree.pickle  amend_tree_dims_height_primates.pickle  (+76 more)
tutorial_blog/: ACTB_gene_tree.nh  ACTB_gene_tree_small.nh  MT_CO1_gene_tree.nh  MT_CO2_gene_tree.nh  MT_CO2_gene_tree_small.nh  blog_post.md  prefixes.txt  tutorial.ipynb
(+1 files in other folders)
